# autotest-cli

./: .autotest.yaml.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  configuration.md  feedback-report-quality.md  plugin-guide.md
src/autotest/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py
src/autotest/adaptation/: __init__.py  base.py  engine.py
src/autotest/analyzer/: __init__.py  base.py  complexity.py  coupling.py  coverage_gap.py  dead_code.py  engine.py
src/autotest/detector/: __init__.py  base.py  registry.py  scanner.py
src/autotest/diagnosis/: __init__.py  ai_reviewer.py  auto_fixer.py  context_builder.py  engine.py  prompts.py  security_scanner.py  static_findings.py
src/autotest/executor/: __init__.py  base.py  engine.py  sandbox.py
src/autotest/models/: __init__.py  adaptation.py  analysis.py  diagnosis.py  execution.py  project.py  report.py
src/autotest/reporter/: __init__.py  base.py  engine.py  html_reporter.py  json_reporter.py  markdown_reporter.py  terminal.py
src/autotest/utils/: __init__.py  async_helpers.py  error_analyzer.py  file_utils.py  git_utils.py
tests/: conftest.py
tests/fixtures/js_project/: index.js  index.test.js  package.json
tests/fixtures/mixed_project/: app.py  (+2 more)
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_adaptation.py  test_analyzer.py  test_auto_fixer.py  test_config.py  test_detector.py  test_diagnosis_engine.py  test_executor.py  test_models.py  test_reporter.py  test_security_scanner.py  test_static_findings.py
(+41 files in other folders)
